# ChatBot-

./: .env  .gitignore  .vercelignore  README.md  app.py  pyproject.toml  requirements.txt  seed.py  seed_horarios.py  server.py  test_admin.py
api/: index.py
app/: __init__.py  logger.py  response.py  settings.py
app/auth/: __init__.py  jwt.py
app/controllers/: __init__.py  admin_controller.py  auth_controller.py  chatbot_controller.py  password_reset_controller.py  reserva_controller.py
app/database/: __init__.py  connection.py
app/docs/: openapi_spec.py  swagger_html.py
app/dto/: __init__.py  admin_dto.py  chat_dto.py  espacio_dto.py  password_dto.py  reserva_dto.py  user_dto.py
app/exceptions/: __init__.py
app/middleware/: __init__.py  cors.py  rate_limit.py
app/models/: __init__.py  aula_laboratorio.py  aula_teorica.py  bloque_horario.py  chatbot.py  curso.py  docente.py  espacio.py  gestor_reservas.py  interfaces.py  notificacion.py  procesador_nlp.py  reserva.py  sala_computo.py  sesion_chat.py  usuario.py
app/repositories/: __init__.py  base.py  chat_repository.py  docente_repository.py  espacio_repository.py  notificacion_repository.py  reserva_repository.py  rol_repository.py  software_repository.py  usuario_repository.py
app/schemas/: __init__.py  admin_schema.py  auth_schema.py  chat_schema.py  password_schema.py  reserva_schema.py
app/services/: __init__.py  admin_service.py  auth_service.py  chat_service.py  espacio_service.py  (+5 more)
config/: database.py
core/: __init__.py  logger.py  session.py  utils.py
public/: index.py
(+29 files in other folders)
